fix menu icon vetical-align middle styles

--- a/app/javascript/iconfont/index.scss
+++ b/app/javascript/iconfont/index.scss
@@ -10,7 +10,6 @@
   font-feature-settings: normal;
   font-variant: normal;
   text-rendering: auto;
-  line-height: inherit;
   font-size: 1em;
 }
 
