--- a/app/javascript/styles/component/menu.scss
+++ b/app/javascript/styles/component/menu.scss
@@ -8,7 +8,6 @@
     display: block;
   }
   .menu-item {
-    line-height: 20px;
     display: block;
     color: $text-main;
     text-decoration: none;
